Add the some task